# meltria

./: README.md
.github/workflows/: release-collectors.yml  release-tools-metrics.yml  release-workflows-containers.yml
collectors/metrics/: Dockerfile  docker-compose.yml  get_metrics_from_prom.py  pyproject.toml
deployment/: README.md
deployment/terraform/: .terraform.lock.hcl  main.tf  variables.tf
hack/: cost_save_gke_cluster.py  descheduler-job.yaml
manifests/: README.md  helmfile.yaml
manifests/litmus/: argo-access.yaml  kustomization.yaml  litmus-admin-rbac.yaml
manifests/monitoring/: kustomization.yaml
manifests/sock-shop/: carts-db-svc.yaml  carts-dep.yaml  catalogue-svc.yaml  front-end-dep.yaml  orders-db-svc.yaml  orders-dep.yaml  orders-svc.yaml  payment-dep.yaml  payment-svc.yaml  queue-master-svc.yaml  rabbitmq-svc.yaml  shipping-dep.yaml  user-db-svc.yaml  user-svc.yaml
manifests/sock-shop-base/: README.md  helmfile.yaml  kustomization.yaml
workflows/: Makefile  README.md  argowf-analytics.cue  argowf-chaos.cue  argowf-cpu-and-memory.params.yaml  argowf-memory.params.yaml  argowf-network.params.yaml  argowf-only-anomaly.params.yaml  argowf-only-anomaly_2022-04-05.params.yaml  argowf-sockshop.2022-11-15.params.yaml  argowf-trainticket.1h.params.yaml  argowf-trainticket.2022-09-14.params.yaml  argowf-trainticket.2022-10-10.params.yaml  argowf-trainticket.2022-10-24.params.yaml  argowf-trainticket.params.yaml  run-one-chaos
workflows/containers/: Dockerfile  docker-compose.yml  list_metrics_files.py  pyproject.toml
(+134 files in other folders)
